force-app/main/default/objects/User/fields/broker__c.field-meta.xml
<CustomField>
    <fullName>broker__c</fullName>
    <label>Broker</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>