force-app/main/default/objects/User/fields/broker_contact__c.field-meta.xml
<CustomField>
    <fullName>broker_contact__c</fullName>
    <label>Broker Contact</label>
    <relationshipName>Users1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>