force-app/main/default/objects/User/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <label>Company URL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>