force-app/main/default/objects/User/fields/Customer_Community_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_Status__c</fullName>
    <label>Customer Community Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase In-Progress</fullName>
                <default>true</default>
                <label>Purchase In-Progress</label>
            </value>
            <value>
                <fullName>Mid-Term Changes with Firm Rider</fullName>
            </value>
            <value>
                <fullName>Mid-Term Changes without Firm Rider</fullName>
            </value>
            <value>
                <fullName>Has Cancelled Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Has Cancelled Firm Rider not Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Has Cancelled Both</fullName>
            </value>
            <value>
                <fullName>Purchased ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>